@@ -17,9 +17,7 @@
 			<f:form.hidden name="search[extendedSearch]" value="{searchParams.extendedSearch}" />
 		</div>
 		<fieldset>
-			<legend><f:translate key="form.legend" /></legend>
 			<div class="tx-indexedsearch-form">
-				<label for="tx-indexedsearch-searchbox-sword"><f:translate key="form.searchFor" />:</label>
 				<f:form.textfield name="search[sword]" value="{sword}" id="tx-indexedsearch-searchbox-sword" class="tx-indexedsearch-searchbox-sword" />
 			</div>
 			<div class="tx-indexedsearch-search-submit">
