@@ -18,7 +18,7 @@ $EM_CONF[$_EXTKEY] = array(
     'author_company' => 'jambage.com',
     'CGLcompliance' => '',
     'CGLcompliance_note' => '',
-    'version' => '3.0.1',
+    'version' => '3.0.2',
     'constraints' => array(
         'depends' => array(
             'php' => '5.5.0-7.3.99',
