@@ -1,53 +1,0 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
-<head>
-<title>Template file for the&quot;macina_searchbox&quot;extension.</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-</head>
-<body>
-<h3>Template file for the &quot;macina_searchbox&quot; extension.</h3>
-<p><b>Available Markers:</b></p>
-<ul>
-  <li>###HEADLINE### Displays the Headline</li>
-  <li>###ADVANCED### Advanced Search Link</li>
-  <li>###SUBMIT### Alttext for the submit button</li>
-  <li>###ACTLANG### UID of the actual language</li>
-  <li>###SEARCHPID### PID of the Searchpage</li>
-</ul>
-<!-- ###TEMPLATE### begin -->
-<form action="###SEARCHPID###" method="post" name="searchform" id="searchform" style="margin:0px; padding:0px; ">
-  <table height="14" border="0" cellpadding="0" cellspacing="0">
-    <tr>
-      <td valign="top">###HEADLINE###</td>
-      <td valign="middle" width="10">&nbsp;</td>
-    </tr>
-    <tr>
-      <td align="left">
-        <input class="tx-macina-searchbox-sword" id="tx-macina-searchbox-sword" type="text" name="tx_indexedsearch_pi2[search][sword]" value="">
-      </td>
-      <td>
-        <input class="tx-indexedsearch-searchbox-button" id="tx-indexedsearch-searchbox-button-submit" type="submit" value="Suchen" name="tx_indexedsearch_pi2[search][submitButton]" />
-
-        <input type="hidden" name="tx_indexedsearch_pi2[__referrer][@extension]" value="IndexedSearch" />
-        <input type="hidden" name="tx_indexedsearch_pi2[__referrer][@vendor]" value="TYPO3\CMS" />
-        <input type="hidden" name="tx_indexedsearch_pi2[__referrer][@controller]" value="Search" />
-        <input type="hidden" name="tx_indexedsearch_pi2[__referrer][@action]" value="form" />
-
-        <input type="hidden" name="tx_indexedsearch_pi2[search][_sections]" value="0" />
-        <input type="hidden" name="tx_indexedsearch_pi2[search][pointer]" value="0" />
-        <input type="hidden" name="tx_indexedsearch_pi2[search][ext]" value="" />
-        <input type="hidden" name="tx_indexedsearch_pi2[search][languageUid]" value="###ACTLANG###" />
-      </td>
-    </tr>
-    <tr>
-      <td align="left" valign="middle" style="font-size:9px">###ADVANCED###</td>
-      <td>&nbsp;</td>
-    </tr>
-  </table>
-</form>
-
-
-
-<!-- ###TEMPLATE### end -->
-</body>
-</html>
