@@ -1,3 +1,8 @@
+2020-01-17  Franz Holzinger  <franz@ttproducts.de>
+    * add CSS comment to README.md.
+    * remove the legend of the search form
+    * remove the template.html
+
 2020-01-15  Franz Holzinger  <franz@ttproducts.de>
     * remove unnecessary parts of the template. This extension is only for the search form and not the list.
 
